# AetherLock-

./: .env.example  .gitignore  COMPREHENSIVE_README.md  DEMO_SCRIPT.md  DEPLOYMENT_GUIDE.md  INSTALLATION.md  README.md  TEST_REPORT.md  aws-setup.md  code-snippets.md  index.html  package-lock.json  package.json  project-structure.md  roadmap.md
ai-agent/: .env.example  README.md
backend/: .env.example  DATABASE_ROLLBACK.md  DEPLOYMENT.md  RAILWAY_DEPLOYMENT.md  README.md  TASK_18_COMPLETION.md  TASK_19_COMPLETION.md  TASK_20_COMPLETION.md  TASK_21.1_COMPLETION.md  TASK_24_COMPLETION.md  jest.config.js  package-lock.json  package.json  railway.json  test-db.js
contracts/: chainlink-source.js  hardhat.config.js  package-lock.json  package.json
demo/: README.md  demo-script.md  judge-evaluation-checklist.md  presentation-slides.md
docs/: deployment.md
frontend/: .env.example  .prettierignore  ARCHITECTURE.md  ASSET_OPTIMIZATION.md  DEPLOYMENT.md  IMPLEMENTATION_STATUS.md  INSTALLATION.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  SETUP.md  TASK_10.1_COMPLETION.md  TASK_11_COMPLETION.md  TASK_12_COMPLETION.md  TASK_13_COMPLETION.md  TASK_14_COMPLETION.md  TASK_15_COMPLETION.md  TASK_16.1_COMPLETION.md  TASK_17_COMPLETION.md  TASK_1_COMPLETION.md  TASK_24.1_COMPLETION.md  TASK_2_COMPLETION.md  (+15 more)
solana-program/: Anchor.toml  Cargo.toml  DEPLOYMENT_SUMMARY.md  deploy-and-test.sh  package-lock.json  package.json  tsconfig.json
solana-program/src/: lib.rs  universal.rs
solana-program/tests/: escrow-comprehensive.test.ts  escrow.test.ts  full-integration.test.ts
(+258 files in other folders)
