[package]
name = "aetherlock-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aetherlock_escrow"

[dependencies]
# align with anchor CLI (0.32.1) to avoid build mismatches
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true